--- a/.github/workflows/2Build_OP_Newifi_D2.yml
+++ b/.github/workflows/2Build_OP_Newifi_D2.yml
@@ -5,7 +5,7 @@
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
-name: Build_Newifi_D2
+name: 2Build_Newifi_D2
 
 # Add a button to trigger the workflow
 on: 
